[project]
name = "cookie-extractor"
version = "0.1.0"
description = "API to extract cookies from websites"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "playwright>=1.40.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"